--- a/Contactme.html
+++ b/Contactme.html
@@ -10,12 +10,12 @@
       <li><a href="https://www.instagram.com/">Instagram</a></li>
       <li><a href="https://www.facebook.com/santiago.lopera.39/">Facebook</a></li>
       <hr />
-      <h4>Mail</h4><p>Santi.lopera96@hotmail.com</p>
+      <h4>Mail</h4><p>Santi@hotmail.com</p>
       <h4>Phone Number</h4>
-      <p>+57 314 685 7764</p>
+      <p>+57 314 453 7764</p>
     </ul>
     <hr>
-    <form  action="mailto:santi.lopera96@hotmail.com" method="post" enctype="text/plain">
+    <form  action="mailto:santi@hotmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
       <label>Your Email:</label>
